# hacks

./: LICENSE  README.md
cli-base/: Cargo.toml  README.md
cli-rayon/src/: main.rs
experiment-wasm-component-layer/: component.rs
experiment-wasm-component-layer/component/: Cargo.toml
experiment-wasm-component-layer/component/src/: lib.rs
experiment-wasm_bridge/rust-guest/: Cargo.toml
experiment-wasm_bridge/rust-guest/src/: lib.rs
experiment-wasm_bridge/rust-runtime/: Cargo.toml  index.html
experiment-wasm_bridge/rust-runtime/src/: code.rs  lib.rs  main.rs
experiment01/: component.rs
experiment01/component/: Cargo.toml  add_numbers.wasm
experiment01/component/src/: main.rs
experiment01/component/wit/: component.wit
extism-layer/: README.md
extism-layer/guest/my-plugin/: Cargo.toml
extism-layer/host/: Cargo.toml
extism-layer/host/src/: main.rs
unified-layer/: README.md  component.wasm
unified-layer/cargo_single_component/: Cargo.toml
unified-layer/cargo_single_component/src/: lib.rs
unified-layer/cargo_single_component/wit/: world.wit
unified-layer/single_component/: build.sh
unified-layer/wasm-layer/: Cargo.toml
unified-layer/wasm-layer/src/: lib.rs  main.rs
wasm_modules/: README.md  component.wasm
wasm_modules/single_component/src/: lib.rs
wasm_modules/single_component/wit/: component.wit
wasm_modules/wasm_layer/src/: lib.rs  main.rs
webgpu-computes/: Cargo.toml  readme.md
webgpu-computes-starter/: Cargo.toml  readme.md
webgpu-computes-starter/src/: main.rs
webgpu-computes/src/: lib.rs  main.rs  shader.wgsl
webgpu-computes/src/shaders/: basic_compute.wgsl
wgpu_experiments/: Cargo.toml  README.md  index.html
wgpu_experiments/src/: lib.rs  main.rs
