[package]
name = "tilekit-cli"
version = "0.1.0"
edition = "2021"
description="tilekit cli: breathing wasm, webgpu, webtransport"
author="Riya Bisht hi@riyabisht.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.14", features = ["cargo"] }
